<resources>
    <string name="app_name">Sales Tracker</string>
    <string name="time_out">Server Time out.</string>
    <string name="try_again">Something went wrong. Please try again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="loading">Loading..</string>
    <string name="delete">Deleting plan..</string>
    <string name="delete_all">Deleting plans..</string>
    <string name="loading_agents">Loading Agents..</string>
    <string name="delete_agents">Deleting Agents..</string>
    <string name="update_user">Updating profile..</string>
    <string name="update_agents_profile">Updating Agent Profile..</string>
    <string name="dummy">The following are top voted examples for showing how to use android.databinding.DataBindingUtil. These examples are extracted from open source projects. You can vote up the examples you like and your votes will be used in our system to product more good examples. </string>
    <string name="logout_text">Are you sure want to logout?</string>
    <string name="subject">Your Subject</string>
    <string name="msg">Your Message</string>
    <string name="str_true">True</string>
    <string name="str_false">False</string>
    <string name="update_status">Plan Status Updated Successfully</string>
    <string name="plan_deleted">Plan Deleted Successfully</string>
    <string name="permission_denied">Permission denied</string>
    <string name="fa_error">{fa-exclamation-triangle}</string>
    <string name="fa_home">{fa-home}</string>
    <string name="title_login">Login to your account</string>
    <string name="edit_emp_id">Your Employee Id</string>
    <string name="edit_pwd">Your Password</string>
    <string name="btn_login">Login</string>
    <string name="contact_us">Contact Us</string>
    <string name="emp_error">Enter Employee Id</string>
    <string name="pwd_error">Enter Password</string>
    <string name="pwd_len_error">Enter 6 digit password</string>
    <string name="login_success">Login Success</string>
    <string name="profile_title">Profile</string>
    <string name="edit_emp_position">Your Position</string>
    <string name="edit_emp_name">Your Name</string>
    <string name="edit_emp_phone">Your Phone Number</string>
    <string name="edit_emp_email">Your Email-Id</string>
    <string name="edit_emp_branch">Branch</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="profile_success">Profile updated successfully</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>
    <string name="agent_title">Agents</string>
    <string name="search">Search Agents by Name</string>
    <string name="btn_delete">Delete</string>
    <string name="delete_success">Delete Agents Successfully</string>
    <string name="add_agent">Add Agent</string>
    <string name="add_name">Agent Name</string>
    <string name="select_tier">Select Tier</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_marketer">Select ME</string>
    <string name="select_hos">Select HOS</string>
    <string name="enter_number">Phone Number</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_krunia">Code for Krunia</string>
    <string name="enter_amg">Code for AMG General</string>
    <string name="enter_desc">Description</string>
    <string name="add">Add</string>
    <string name="add_agent_success">Add Agent Successfully.</string>
    <string name="enter_agent_name">Enter Agent Name</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="enter_valid_phone">Enter Valid Phone Number</string>
    <string name="enter_email_id">Enter Email Address</string>
    <string name="enter_valid_email_id">Enter Valid Email Address</string>
    <string name="enter_krunia_code">Enter Krunia Code</string>
    <string name="enter_amg_code">Enter AMG General Code</string>
    <string name="enter_description">Enter Description</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="edt_name">Your Name</string>
    <string name="edt_email">Your Email</string>
    <string name="edt_msg">Your Message</string>
    <string name="btn_submit">Submit</string>
    <string name="agent_profile_title">Agent Profile</string>
    <string name="contact_title">Contacts</string>
    <string name="branch_contact">Branch Contact</string>
    <string name="department_contact">Department Contact</string>
    <string name="search_branch_contact">Search Branch Contact</string>
    <string name="search_department_contact">Search Department Contact</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_log_title">Action Log</string>
    <string name="add_action_log_title">Add Action Log</string>
    <string name="serial">Serial #</string>
    <string name="select_agent">Select Agent</string>
    <string name="select_dept">Select Department</string>
    <string name="add_file">Add File</string>
    <string name="no_pic">No Incharge found. Please change department.</string>
    <string name="select_pic">Select In-charge</string>
    <string name="select_priority">Select Priority</string>
    <string name="select_file">Select File</string>
    <string name="upload_failed">Failed to uploading file.</string>
    <string name="add_action_success">Action log added successfully.</string>
    <string name="btn_remark">Add Remark</string>
    <string name="btn_approve">Approve</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_reopen">Reopen</string>
    <string name="edit">Add Remark</string>
    <string name="action_log_details_title">Details</string>
    <string name="reopen_success">Your request for reopen Action Log has been sent successfully</string>
    <string name="no_attachment">No Attachment</string>
    <string name="empty_remark">You cannot send empty remark</string>
    <string name="your_remark">Type your remark</string>
    <string name="remark">Remark</string>
    <string name="no_remark">No Remarks</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="processing">Processing</string>
    <string name="reject">Rejected</string>
    <string name="order_due">Overdue</string>
    <string name="due_today">Due Today</string>
    <string name="on_going">On Going</string>
    <string name="approve">Approve</string>
    <string name="remark_title">Remarks</string>
    <string name="agent_name">Agent Name</string>
    <string name="description">Description</string>
    <string name="date_raised">Date Raised</string>
    <string name="status">Status</string>
    <string name="dept">Department</string>
    <string name="sla">SLA</string>
    <string name="last_update">Last Updated</string>
    <string name="approved_date">Approved Date</string>
    <string name="attachment">Attachment</string>
    <string name="no_record">No Records</string>
    <string name="no_mkt">No Marketers</string>
    <string name="no_hos">No HOS</string>
    <string name="no_branch">No Branches</string>
    <string name="agent_delete_dialog">Are you sure want to delete this agent?</string>
    <string name="dialog_title">Add New Remark</string>
    <string name="ask_download">Are you sure want to download this attachment?</string>
    <string name="deleted_agent">**Deleted Agent**</string>
    <string name="employee_title">Employee</string>
    <string name="search_employee">Search Employee by Name</string>
    <string name="delete_employee">Deleting Employee..</string>
    <string name="delete_employees">Deleting Employees..</string>
    <string name="add_employee_title">Add Employee</string>
    <string name="add_employee_name">Employee Name</string>
    <string name="add_employee_id">Employee Id</string>
    <string name="select_position">Select Position</string>
    <string name="marketer">Marketer</string>
    <string name="select_region">Select Region</string>
    <string name="enter_employee_id">Enter Employee ID</string>
    <string name="enter_employee_name">Enter Employee Name</string>
    <string name="add_employee_success">Add Employee Successfully.</string>
    <string name="employee_delete_dialog">Are you sure want to delete this employee?</string>
    <string name="add_plan">Add Visit Plan</string>
    <string name="sales_title">Sales Visit Plan</string>
    <string name="add_agent_dialog_title">Add Visit Plan</string>
    <string name="schedule">Schedule</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="agent">Agent</string>
    <string name="total_plan">Total</string>
    <string name="actual_plan">Act</string>
    <string name="addition_plan">Adh</string>
    <string name="pls_select_start_time">Please Select Start Time</string>
    <string name="pls_select_end_time">Please Select End Time</string>
    <string name="pls_select_agent">Please Select Agent</string>
    <string name="select_between_time">From time should be lessthan To</string>
    <string name="add_visit_plan_success">Visit plan added successfully.</string>
    <string name="progress_update_success">Progress updated successfully.</string>
    <string name="delete_all_plan">Delete All Plan</string>
    <string name="ask_for_delete_all_plan">Are you sure want to delete all plan of</string>
    <string name="set">Set</string>
    <string name="time_picker_dialog_title">Select Time</string>
    <string name="actual_production_dialog_title">Actual Production</string>
    <string name="progress">Progress</string>
    <string name="enter_progress">Please Enter Progress</string>
    <string name="mapping_hint">Location</string>
    <string name="mapping_visit_hint">No. of Prospect</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="add_more">Add More</string>
    <string name="submit_success">Submitted Successfully</string>
    <string name="update_success">Updated Successfully</string>
    <string name="submitting">Submitting...</string>
    <string name="updating">Updating...</string>
    <string name="fetching_data">Fetching Data...</string>
    <string name="deleting_data">Deleting Data...</string>
    <string name="fetch_error">Error While Fetching Data. Please Try Again.</string>
    <string name="delete_error">Error While Deleting Data. Please Try Again.</string>
    <string name="mapping_submit_success">Submit</string>
    <string name="enter_all">Enter All Details</string>
    <string name="enter_mapping">Enter Mapping Location</string>
    <string name="delete_plan">Delete Plan</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_agents">No Agents</string>
    <string name="no_dept">No Departments</string>
    <string name="ask_for_delete_plan">Are you sure want to delete this plan?</string>
    <string name="chart_title">Chart</string>
    <string name="branch_chart_title">Branch Chart</string>
    <string name="dept_chart_title">Department Chart</string>
    <string name="sla_chart_title">Department SLA Chart</string>
    <string name="visit_plan_chart_title">Sales Visit Plan Chart</string>
    <string name="select_year">Select Year</string>
    <string name="select_month">Select Month</string>
    <string name="communication_list_title">Communication</string>
    <string name="event_list_title">Event</string>
    <string name="add_event_title">Add Event</string>
    <string name="date">Date</string>
    <string name="event_name">Event Name</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_date">Enter Date</string>
    <string name="add_event_success">Add Event Successfully.</string>
    <string name="update_event_success">Event Updated Successfully.</string>
    <string name="event_detail_title">Event Detail</string>
</resources>