<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.webmne.salestracker.agent.AddAgentActivity">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/app_bar" />

        <com.webmne.salestracker.widget.TfTextView
            android:id="@+id/txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_12dp"
            android:gravity="center"
            android:text="@string/btn_delete"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_textsize"
            android:visibility="gone"
            app:isBold="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbarLayout">

            <LinearLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_16dp">

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:hint="@string/event_name"
                    android:inputType="text" />

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:longClickable="false" />

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/select_region"
                    android:longClickable="false" />

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtBranch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/select_branch"
                    android:longClickable="false" />

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/select_position"
                    android:longClickable="false" />

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:gravity="start|top"
                    android:hint="@string/enter_desc"
                    android:inputType="textMultiLine"
                    android:minLines="3" />

                <com.webmne.salestracker.widget.TfButton
                    android:id="@+id/btnAdd"
                    style="@style/MyButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/add" />
            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</layout>
