<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/app_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:layout_below="@+id/toolbarLayout">

            <LinearLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen_16dp">

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtAgent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/select_agent"
                    android:longClickable="false" />

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/select_dept"
                    android:longClickable="false" />

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtIncharge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/select_pic"
                    android:longClickable="false" />

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtPriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/select_priority"
                    android:longClickable="false" />

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtSelectFile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/select_file"
                    android:inputType="number"
                    android:longClickable="false"
                    android:text="@string/select_file" />

                <com.webmne.salestracker.widget.TfEditText
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:gravity="start|top"
                    android:hint="@string/enter_desc"
                    android:inputType="textMultiLine"
                    android:minLines="3" />

                <com.webmne.salestracker.widget.TfButton
                    android:id="@+id/btnAdd"
                    style="@style/MyButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/add_action_log_title" />
            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</layout>