<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10dp">

    <com.webmne.salestracker.widget.TfEditText
        android:id="@+id/edtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:hint="@string/enter_desc"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.webmne.salestracker.widget.TfButton
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/BUTTON_HEIGHT"
            android:text="@string/btn_cancel"
            android:textColor="@color/half_black" />

        <com.webmne.salestracker.widget.TfButton
            android:id="@+id/btnOk"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/BUTTON_HEIGHT"
            android:text="@string/btn_ok"
            android:textColor="@color/half_black" />

    </LinearLayout>
</LinearLayout>